--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
-@import-normalize; /* bring in normalize.css styles */
+@import '../node_modules/normalize.css/normalize.css'; /* bring in normalize.css styles */
 
+* {
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -12,4 +15,13 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h1,
+h2,
+h3,
+ul,
+p {
+  margin: 0;
+  padding: 0;
 }
